bk_ida/gccida/g1/new_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_die/src/dwarf2out.c:5533:22: error: must use 'enum' tag to refer to type 'dwarf_tag'
dw_die_ref  new_die( dwarf_tag tag_value, dw_die_ref parent_die, tree t) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_die/src/dwarf2out.c:5545:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_die/src/obj/dwarf2out.o] Error 1
